Fixing gaps

--- a/Unidad2-CSS/Practica 5-Peluquería/styles/styles_common.css
+++ b/Unidad2-CSS/Practica 5-Peluquería/styles/styles_common.css
@@ -111,24 +111,23 @@ section#reservas {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 0.25fr 1fr;
-    row-gap: 5%;
     column-gap: 5%;
     object-fit: cover;
     padding-bottom: 1%;
 }
     section#reservas .crd-header {
         grid-column-end: span 2;
+        margin-bottom: 1%;
     }
     section#reservas .img-container img {
         width: 100%;
-        height: 95%;
         object-fit: cover;
         border-radius: 4px;
     }
     section#reservas .crd-form {
         background-color: rgba(240,240,240,0.95);
         border-radius: 8px;
-        height: 95%;
+
     }
         section#reservas .crd-form form {
             display: flex;
@@ -164,9 +163,11 @@ section#reservas {
 
 section#servicios {
     display: grid;
-    row-gap: 5%;
     padding-bottom: 5%;
 }
+    section#servicios .crd-header {
+        margin-bottom: 1%;
+    }
     section#servicios table {
         box-shadow: 0.5px 0.5px 3px 1px rgba(200,200,200, 0.95);
     }
